--- a/roles/nginx/templates/jupyterhub.nginx.jinja
+++ b/roles/nginx/templates/jupyterhub.nginx.jinja
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     server_name localhost;
     listen 443 ssl;
@@ -17,12 +22,9 @@ server {
         # websocket headers
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header X-Scheme $scheme;
 
         proxy_buffering off;
-    }
-
-    location /jupyter/custom-static/ {
-        alias /opt/jupyterhub/static/;
     }
 }
