--- a/roles/nginx/templates/jupyterhub.nginx.jinja
+++ b/roles/nginx/templates/jupyterhub.nginx.jinja
@@ -4,7 +4,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    server_name localhost;
+    server_name localhost;  # TODO put IP ADDRESS HERE
     listen 443 ssl;
 
     ssl_certificate /etc/ssl/private/ilifu.crt;
