Install Rstudio on worker. Install Caddy on login. Fix configs for jupyter, and caddy.

--- a/roles/jupyter/templates/jupyterhub_config.py.jinja
+++ b/roles/jupyter/templates/jupyterhub_config.py.jinja
@@ -194,7 +194,7 @@ c = get_config()  #noqa
 #          Sets protocol, ip, base_url
 #  Default: 'http://:8000'
 # c.JupyterHub.bind_url = 'http://:8000'
-c.JupyterHub.bind_url = 'http://:8000/jupyter'
+c.JupyterHub.bind_url = 'http://:8000/{{ ansible_hostname }}/jupyter'
 
 ## Whether to shutdown the proxy when the Hub shuts down.
 #
