Serve all files for /* (including logo). Tell browser to cache page since it never changes.

--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -2,7 +2,8 @@
     log {
         output file /var/log/caddy/access.log
     }
-    handle / {
+    handle /* {
+        header Cache-Control "public, max-age=604800, stale-while-revalidate=86400"
         root * /var/www/html
         file_server
     }
